--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "nodemailer": "^6.9.16",
     "nodemon": "^3.1.9",
     "passport": "^0.7.0",
+    "passport-github2": "^0.1.12",
     "passport-google-oauth20": "^2.0.0",
     "razorpay": "^2.9.5"
   }
